<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <!--    bottom_navigation_title-->
    <string name="bottom_navigation_title_main">Главная</string>
    <string name="bottom_navigation_title_favorite">Избранное</string>
    <string name="bottom_navigation_title_team">Команда</string>
    <string name="team_header">Команда</string>
    <string name="developed_by_text">Над приложением работали</string>
    <string name="anar_aliev">Анар Алиев</string>
    <string name="anton_aniskin">Антон Анискин</string>
    <string name="ali_lagkonov">Али Лагконов</string>
    <string name="damir_garipov">Дамир Гарипов</string>
    <string name="polina_domahina">Полина Домахина</string>
    <string name="search_vacancies">Поиск вакансий</string>
    <string name="search_edit_hint">Введите запрос</string>
    <string name="search_no_internet">Нет интернета</string>
    <string name="search_nothing_found">Не удалось получить\nсписок вакансий</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="search_state_nothing_found">Таких вакансий нет</string>
    <string name="vacancy">Вакансия</string>
    <string name="similar_vacancies">Похожие вакансии</string>
    <string name="required_expirience">Требуемый опыт</string>
    <string name="list_empty">Список пуст</string>
    <string name="vacancy_not_found">Вакансия не найдена или\nудалена</string>
    <string name="vacancy_found_one">Найдена %1$d вакансия</string>
    <string name="vacancy_found_few">Найдено %1$d вакансии</string>
    <string name="vacancy_found_many">Найдено %1$d вакансий</string>

    <string name="salary_template_from_to">от %1$s до %2$s %3$s</string>
    <string name="salary_template_from">от %1$s %2$s</string>
    <string name="salary_template_to">до %1$s %2$s</string>
    <string name="message_salary_not_pointed">Зарплата не указана</string>
    <string name="company_not_specified">Не указано</string>
    <string name="filter_toolbar">Настройки фильтрации</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="dont_show_empty_amount">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>

    <string name="choose_industry">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="choose">Выбрать</string>
    <string name="choose_button">Выбрать</string>
    <string name="region">Регион</string>
    <string name="choose_workspace">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="choose_country">Выбор страны</string>
    <string name="enter_region">Введите регион</string>
    <string name="choose_region">Выбор региона</string>
    <string name="industry_empty_list">Не удалось получить список</string>
    <string name="no_region_found">Такого региона нет</string>
    <string name="no_industry_found">Нет такой отрасли</string>
</resources>
