<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/day_night"
    android:orientation="vertical"
    tools:context=".vacancy.filter.ui.FilterFragment">

    <Toolbar
        android:id="@+id/tool_bar_filter"
        style="@style/TextMedium22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStart="@dimen/dimens_16"
        android:navigationIcon="@drawable/ic_arrow_back"
        android:paddingVertical="@dimen/dimens_8"
        android:title="@string/filter_toolbar"

        app:layout_constraintTop_toTopOf="parent">

    </Toolbar>

    <LinearLayout
        android:id="@+id/ll_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_16"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimens_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar_filter">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_work_place_filter"
            style="@style/TextInputLayout.FilterItem"
            android:backgroundTint="@color/white_universal"
            android:textColorHint="@color/gray"
            app:endIconDrawable="@drawable/ic_arrow_forward"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar_filter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_work_place"
                style="@style/TextInputEditText.FilterInput"
                android:layout_marginStart="@dimen/minus16"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/workplace"
                android:textSize="@dimen/text_size_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_industry"
            style="@style/TextInputLayout.FilterItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white_universal"
            android:textColorHint="@color/gray"
            app:endIconDrawable="@drawable/ic_arrow_forward"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_industry_field"
                style="@style/TextInputEditText.FilterInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/minus16"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/industry"
                android:textSize="@dimen/text_size_16" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_salary"
        style="@style/TextInputLayout"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_24"
        android:layout_marginEnd="@dimen/dimens_16"
        android:hint="@string/expected_salary"
        android:paddingVertical="@dimen/dimens_8"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ll_text_input"
        app:layout_constraintTop_toBottomOf="@+id/ll_text_input"
        app:placeholderText="@string/enter_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_salary_field"
            style="@style/TextInputEditText"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_input_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimens_12"
        android:paddingVertical="@dimen/dimens_8"
        android:src="@drawable/ic_clear"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tl_salary"
        app:layout_constraintEnd_toEndOf="@id/tl_salary"
        app:layout_constraintTop_toTopOf="@id/tl_salary" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_24"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_salary">


        <TextView
            android:id="@+id/tv_dont_show_empty_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/dont_show_empty_amount"
            android:textSize="@dimen/text_size_16" />

        <CheckBox
            android:id="@+id/checkbox_hide_with_salary"
            style="@style/CustomCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_button_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:layout_marginBottom="@dimen/dimens_24"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_apply"
            style="@style/Button.Blue"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/dimens_8"
            android:text="@string/apply"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset"
            style="@style/Button.Transparent"
            android:layout_width="match_parent"
            android:text="@string/reset"
            android:visibility="visible" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
