<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vacancy.search.ui.SearchFragment">

    <Toolbar
        android:id="@+id/tool_bar"
        style="@style/TextMedium22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStart="@dimen/dimens_16"
        android:title="@string/search_vacancies"
        android:paddingVertical="@dimen/dimens_8"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            style="@style/ImageFilter"
            android:id="@+id/button_filter"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dimens_8"
            android:background="?android:windowBackground"
            tools:ignore="contentDescription" />
    </Toolbar>

    <FrameLayout
        android:id="@+id/container_search"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/dimens_16"
        android:layout_marginBottom="@dimen/dimens_4"
        android:paddingVertical="@dimen/dimens_8"
        app:layout_constraintTop_toBottomOf="@id/tool_bar">

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_rounded_for_search_result"
            android:textColor="@color/black"
            android:textColorHint="@color/search_edit_hint_color"
            android:inputType="text"
            android:focusable="true"
            android:textCursorDrawable="@drawable/cursor_search_edit"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text_size_16"
            android:gravity="center_vertical"
            android:hint="@string/search_edit_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/dimens_16"
            android:paddingEnd="4dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingHorizontal="@dimen/dimens_16"
            android:paddingVertical="@dimen/dimens_16"
            android:src="@drawable/ic_search"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/button_clear_edit_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingHorizontal="@dimen/dimens_16"
            android:paddingVertical="@dimen/dimens_16"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            tools:ignore="contentDescription" />
    </FrameLayout>

    <ImageView
        android:id="@+id/placeholder_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimens_16"
        android:src="@drawable/placeholder_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_search"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="contentDescription" />

    <LinearLayout
        android:id="@+id/placeholder_search_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_search">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_search_no_internet"
            tools:ignore="contentDescription" />

        <TextView
            style="@style/TextMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/dimens_16"
            android:text="@string/search_no_internet" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_nothing_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_search" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimens_16"
            android:src="@drawable/placeholder_nothing_found"
            tools:ignore="contentDescription" />

        <TextView
            style="@style/TextMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/dimens_16"
            android:gravity="center"
            android:text="@string/search_nothing_found" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_server_not_responding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_search">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimens_16"
            android:src="@drawable/placeholder_server_not_responding"
            tools:ignore="contentDescription" />

        <TextView
            style="@style/TextMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/dimens_16"
            android:gravity="center"
            android:text="@string/server_error" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_search"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:clipToPadding="false"
        android:paddingTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/search_state"
        app:layout_constraintBottom_toTopOf="@id/progress_bar_pagination"
        tools:listitem="@layout/item_vacancy" />

    <TextView
        android:id="@+id/search_state"
        style="@style/TextRegular16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_search_state"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_search"
        tools:text="@string/search_state_nothing_found" />

    <ProgressBar
        android:id="@+id/progress_bar_pagination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:layout_marginBottom="@dimen/dimens_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
